<resources>
    <string name="app_name">CEOXPY</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="Marzo">Marzo</string>
    <string name="Abril">Abril</string>
    <string name="Mayo">Mayo</string>
    <string name="Junio">Junio</string>
    <string name="Julio">Julio</string>
    <string name="Agosto">Agosto</string>
    <string name="Septiembre">Septiembre</string>
    <string name="Octubre">Octubre</string>
    <string name="Noviembre">Noviembresinti :(</string>
    <string name="Diciembre">Diciembre</string>
    <string name="info">Info</string>
    <string name="_0" />
    <string name="Calcular">Calcular</string>
    <string name="_1">00</string>
    <string name="New">New</string>
    <string name="Nueevo">Nuevo</string>
</resources>
